--- a/NewFractalCompression/NewFractalCompression/NewFractalCompression.csproj
+++ b/NewFractalCompression/NewFractalCompression/NewFractalCompression.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D6F48CBC-2E65-44AA-A9AE-1248F592A000}</ProjectGuid>
+    <ProjectGuid>{FDD18CBD-58E9-41AB-88D9-0E70F4C7AFC3}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Fractal_Compression</RootNamespace>
-    <AssemblyName>Fractal Compression</AssemblyName>
+    <RootNamespace>NewFractalCompression</RootNamespace>
+    <AssemblyName>NewFractalCompression</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -35,6 +35,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +49,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
