--- a/NewFractalCompression/NewFractalCompression/NewFractalCompression.csproj
+++ b/NewFractalCompression/NewFractalCompression/NewFractalCompression.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Code\CompressionClass.cs" />
     <Compile Include="Code\Metrics.cs" />
     <Compile Include="Code\MyConverter.cs" />
+    <Compile Include="Code\Post.cs" />
     <Compile Include="Code\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
