--- a/NewFractalCompression/NewFractalCompression/NewFractalCompression.csproj
+++ b/NewFractalCompression/NewFractalCompression/NewFractalCompression.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Code\AbstractCompression.cs" />
     <Compile Include="Code\BlockTree.cs" />
     <Compile Include="Code\CompressionClass.cs" />
     <Compile Include="Code\Metrics.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="Code\Object.cs" />
     <Compile Include="Code\Post.cs" />
     <Compile Include="Code\Program.cs" />
+    <Compile Include="Code\QuadTreeCompression.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
